2007-03-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (mesure.dynamics.id)
	(measure.dynamics.idage) : 'error' argument added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id_expected)
	(R_igraph_measure_dynamics_idage_expected) : added
	
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage) : 'cites' argument added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id)
	(R_igraph_measure_dynamics_idage) : updated to have 'cites'

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	'debug' and 'debugdeg' added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id) :
	updated to have 'debug' and 'debugdeg'
	
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage) : some reorganization to return
	consistent 'st'

2007-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/tkplot.R (.tkplot.convert.color) : drop
	alpha channel if present

	* interfaces/R/igraph/R/tkplot.R (.tkplot.convert.color, tkplot) : 
	added, convert numeric colors to color names 

2007-03-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot) : edge plotting rewritten

2007-03-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot) : support for loop edges

	* interfaces/R/igraph/R/plot.common.R (i.default.values) 
	* interfaces/R/igraph/R/plot.R (rglplot) : loop.angle2 argument added

2007-03-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot) : new parameter handling
	style added

	* interfaces/R/igraph/R/plot.R (plot.igraph)
	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 
	loop.angle edge parameter added

	* interfaces/R/igraph/R/tkplot.R (tkplot) : new parameter handling 
	style added

	* interfaces/R/igraph/R/tkplot.R (tkplot) : added support for
	arrow.mode argument
